--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,23 +1,28 @@
+nodeLinker: node-modules
+
 packageExtensions:
-  'sass-loader@*':
+  eslint-config-airbnb-typescript@*:
     dependencies:
-      node-sass: '*'
-  'eslint-module-utils@*':
+      eslint: "*"
+      eslint-plugin-import: "*"
+      eslint-plugin-jsx-a11y: "*"
+      eslint-plugin-react: "*"
+      eslint-plugin-react-hooks: "*"
+  eslint-module-utils@*:
     dependencies:
-      eslint-import-resolver-node: '*'
-  'eslint-config-airbnb-typescript@*':
-    dependencies:
-      eslint: '*'
-      eslint-plugin-import: '*'
-      eslint-plugin-jsx-a11y: '*'
-      eslint-plugin-react-hooks: '*'
-      eslint-plugin-react: '*'
+      eslint-import-resolver-node: "*"
+  sass-loader@*:
+    peerDependencies:
+      node-sass: "^4.0.0"
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
-    spec: '@yarnpkg/plugin-interactive-tools'
+    spec: "@yarnpkg/plugin-interactive-tools"
 
-yarnPath: .yarn/releases/yarn-berry.cjs
+npmScopes:
+  fortawesome:
+    npmRegistryServer: 'https://npm.fontawesome.com/'
+    npmAlwaysAuth: true
+    npmAuthToken: ${FA_TOKEN}
 
-# Sadly a lot of things like intellisense don't seem to work with pnp :(
-nodeLinker: 'node-modules'
+yarnPath: .yarn/releases/yarn-2.4.0.cjs
