--- a/package.json
+++ b/package.json
@@ -6,27 +6,37 @@
     "graphql": "14.7.0"
   },
   "dependencies": {
+    "@dream-bit-de/gatsby-plugin-better-page-tree": "^1.6.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/pro-duotone-svg-icons": "^5.15.1",
+    "@fortawesome/pro-light-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.29.1",
+    "gatsby": "^2.29.2",
     "gatsby-image": "^2.8.0",
     "gatsby-plugin-google-fonts-v2": "^0.0.6",
+    "gatsby-plugin-mdx": "^1.7.1",
+    "gatsby-remark-embedder": "^4.1.0",
     "lodash": "4.17.20",
+    "medium-zoom": "^1.0.6",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
-    "react-hotkeys-hook": "^2.4.0"
+    "react-hotkeys-hook": "^3.0.1"
   },
   "devDependencies": {
     "@types/jest": "^26.0.19",
-    "@types/lodash": "^4.14.165",
-    "@types/node": "^14.14.14",
+    "@types/lodash": "^4.14.166",
+    "@types/node": "^14.14.16",
     "@types/react": "^16.14.2",
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
-    "@typescript-eslint/parser": "^4.10.0",
-    "eslint": "^7.15.0",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
+    "eslint": "^7.16.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.0.0",
-    "eslint-config-prettier": "^7.0.0",
+    "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-graphql": "^4.0.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -36,23 +46,26 @@
     "gatsby-plugin-catch-links": "^2.7.0",
     "gatsby-plugin-feed": "^2.10.0",
     "gatsby-plugin-google-analytics": "^2.8.0",
-    "gatsby-plugin-manifest": "^2.9.0",
+    "gatsby-plugin-manifest": "^2.9.1",
     "gatsby-plugin-netlify": "^2.8.0",
     "gatsby-plugin-postcss": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-plugin-sass": "^2.8.0",
-    "gatsby-plugin-sharp": "^2.11.1",
+    "gatsby-plugin-sharp": "^2.11.2",
     "gatsby-plugin-sitemap": "^2.9.0",
     "gatsby-plugin-ts-config": "^1.1.5",
     "gatsby-plugin-typegen": "^2.2.2",
     "gatsby-plugin-typescript": "^2.9.0",
-    "gatsby-source-filesystem": "^2.8.0",
+    "gatsby-remark-autolink-headers": "^2.8.0",
+    "gatsby-remark-external-links": "^0.0.4",
+    "gatsby-remark-images": "^3.8.1",
+    "gatsby-source-filesystem": "^2.8.1",
     "gatsby-transformer-sharp": "^2.9.0",
     "husky": "^4.3.6",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
     "node-sass": "^4.14.1",
-    "postcss": "latest",
+    "postcss": "^8.2.1",
     "prettier": "^2.2.1",
     "tailwindcss": "^2.0.2",
     "tailwindcss-export-config": "^2.3.0",
