--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@northxsouth/gatsby-starter-minimal",
+  "name": "@mccdgm/uiux",
   "version": "0.2.0",
   "private": true,
   "resolutions": {
@@ -14,17 +14,16 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.29.2",
-    "gatsby-image": "^2.8.0",
+    "gatsby": "^2.30.1",
+    "gatsby-image": "^2.9.0",
     "gatsby-plugin-google-fonts-v2": "^0.0.6",
-    "gatsby-plugin-mdx": "^1.7.1",
-    "gatsby-remark-embedder": "^4.1.0",
+    "gatsby-plugin-mdx": "^1.8.0",
     "lodash": "4.17.20",
     "medium-zoom": "^1.0.6",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
-    "react-hotkeys-hook": "^3.0.1"
+    "react-hotkeys-hook": "^3.0.3"
   },
   "devDependencies": {
     "@types/jest": "^26.0.19",
@@ -43,29 +42,32 @@
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "gatsby-plugin-catch-links": "^2.7.0",
-    "gatsby-plugin-feed": "^2.10.0",
-    "gatsby-plugin-google-analytics": "^2.8.0",
-    "gatsby-plugin-manifest": "^2.9.1",
-    "gatsby-plugin-netlify": "^2.8.0",
-    "gatsby-plugin-postcss": "^3.4.0",
-    "gatsby-plugin-react-helmet": "^3.7.0",
-    "gatsby-plugin-sass": "^2.8.0",
-    "gatsby-plugin-sharp": "^2.11.2",
-    "gatsby-plugin-sitemap": "^2.9.0",
+    "gatsby-plugin-catch-links": "^2.8.0",
+    "gatsby-plugin-feed": "^2.11.0",
+    "gatsby-plugin-google-analytics": "^2.9.0",
+    "gatsby-plugin-instagram-embed": "^2.0.1",
+    "gatsby-plugin-manifest": "^2.10.0",
+    "gatsby-plugin-netlify": "^2.9.0",
+    "gatsby-plugin-postcss": "^3.5.0",
+    "gatsby-plugin-react-helmet": "^3.8.0",
+    "gatsby-plugin-sass": "^3.0.0",
+    "gatsby-plugin-sharp": "^2.12.0",
+    "gatsby-plugin-sitemap": "^2.10.0",
     "gatsby-plugin-ts-config": "^1.1.5",
+    "gatsby-plugin-twitter": "^2.8.0",
     "gatsby-plugin-typegen": "^2.2.2",
-    "gatsby-plugin-typescript": "^2.9.0",
-    "gatsby-remark-autolink-headers": "^2.8.0",
+    "gatsby-plugin-typescript": "^2.10.0",
+    "gatsby-remark-autolink-headers": "^2.9.0",
+    "gatsby-remark-embedder": "^4.1.0",
     "gatsby-remark-external-links": "^0.0.4",
-    "gatsby-remark-images": "^3.8.1",
-    "gatsby-source-filesystem": "^2.8.1",
-    "gatsby-transformer-sharp": "^2.9.0",
-    "husky": "^4.3.6",
+    "gatsby-remark-images": "^3.9.0",
+    "gatsby-source-filesystem": "^2.9.0",
+    "gatsby-transformer-sharp": "^2.10.0",
+    "husky": "^4.3.7",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
     "node-sass": "^4.14.1",
-    "postcss": "^8.2.1",
+    "postcss": "^8.2.3",
     "prettier": "^2.2.1",
     "tailwindcss": "^2.0.2",
     "tailwindcss-export-config": "^2.3.0",
