--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdx-js/react": "^1.6.22",
     "dotenv": "^8.2.0",
     "gatsby": "^2.30.1",
+    "gatsby-cli": "^2.17.0",
     "gatsby-image": "^2.9.0",
     "gatsby-plugin-google-fonts-v2": "^0.0.6",
     "gatsby-plugin-mdx": "^1.8.0",
