--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "gatsby-remark-images": "^3.9.0",
     "gatsby-source-filesystem": "^2.9.0",
     "gatsby-transformer-sharp": "^2.10.0",
+    "gatsby-transformer-yaml": "^2.11.0",
     "husky": "^4.3.7",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
