--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "gatsby-plugin-catch-links": "^2.8.0",
+    "gatsby-plugin-draft": "^0.1.0",
     "gatsby-plugin-feed": "^2.11.0",
     "gatsby-plugin-google-analytics": "^2.9.0",
     "gatsby-plugin-instagram-embed": "^2.0.1",
