--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-image": "^2.9.0",
     "gatsby-plugin-google-fonts-v2": "^0.0.6",
     "gatsby-plugin-mdx": "^1.8.0",
+    "gatsby-remark-gifs": "^1.0.0",
     "lodash": "4.17.20",
     "medium-zoom": "^1.0.6",
     "react": "^16.14.0",
