--- a/package.json
+++ b/package.json
@@ -69,13 +69,13 @@
     "husky": "^4.3.7",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
-    "node-sass": "^4.14.1",
     "postcss": "^8.2.3",
     "prettier": "^2.2.1",
+    "sass": "^1.32.8",
     "tailwindcss": "^2.0.4",
     "tailwindcss-export-config": "^2.3.0",
     "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3"
+    "typescript": "4.1.5"
   },
   "license": "MIT",
   "lint-staged": {
