--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
     "@mdx-js/react": "^1.6.22",
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
-    "gatsby": "^3.1.1",
+    "gatsby": "^3.2.1",
     "gatsby-cli": "^3.1.0",
-    "gatsby-image": "^3.1.0",
-    "gatsby-plugin-google-fonts-v2": "^0.0.6",
-    "gatsby-plugin-mdx": "^2.1.0",
+    "gatsby-image": "^3.2.0",
+    "gatsby-plugin-mdx": "^2.2.0",
     "gatsby-remark-gifs": "^1.0.0",
     "lodash": "4.17.21",
     "medium-zoom": "^1.0.6",
@@ -27,6 +26,8 @@
     "react-hotkeys-hook": "^3.2.1"
   },
   "devDependencies": {
+    "@northxsouth/gatsby-plugin-google-fonts": "^0.10.3",
+    "@tailwindcss/jit": "^0.1.18",
     "@types/jest": "^26.0.19",
     "@types/lodash": "^4.14.166",
     "@types/node": "^14.14.16",
@@ -43,33 +44,34 @@
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "gatsby-plugin-catch-links": "^3.1.0",
+    "gatsby-plugin-catch-links": "^3.2.0",
     "gatsby-plugin-draft": "^0.1.0",
-    "gatsby-plugin-feed": "^3.1.0",
-    "gatsby-plugin-google-analytics": "^3.1.0",
+    "gatsby-plugin-feed": "^3.2.0",
+    "gatsby-plugin-google-analytics": "^3.2.0",
     "gatsby-plugin-instagram-embed": "^2.0.1",
-    "gatsby-plugin-manifest": "^3.1.0",
-    "gatsby-plugin-netlify": "^3.1.0",
-    "gatsby-plugin-postcss": "^4.1.0",
-    "gatsby-plugin-react-helmet": "^4.1.0",
-    "gatsby-plugin-sass": "^4.1.0",
-    "gatsby-plugin-sharp": "^3.1.1",
-    "gatsby-plugin-sitemap": "^3.1.0",
+    "gatsby-plugin-manifest": "^3.2.0",
+    "gatsby-plugin-netlify": "^3.2.0",
+    "gatsby-plugin-postcss": "^4.2.0",
+    "gatsby-plugin-react-helmet": "^4.2.0",
+    "gatsby-plugin-sass": "^4.2.0",
+    "gatsby-plugin-sharp": "^3.2.0",
+    "gatsby-plugin-sitemap": "^3.2.0",
     "gatsby-plugin-ts-config": "^1.1.5",
-    "gatsby-plugin-twitter": "^3.1.0",
+    "gatsby-plugin-twitter": "^3.2.0",
     "gatsby-plugin-typegen": "^2.2.4",
-    "gatsby-plugin-typescript": "^3.1.0",
-    "gatsby-remark-autolink-headers": "^3.1.0",
+    "gatsby-plugin-typescript": "^3.2.0",
+    "gatsby-remark-autolink-headers": "^3.2.0",
     "gatsby-remark-embedder": "^4.1.0",
     "gatsby-remark-external-links": "^0.0.4",
-    "gatsby-remark-images": "^4.1.0",
-    "gatsby-source-filesystem": "^3.1.0",
-    "gatsby-transformer-sharp": "^3.1.0",
-    "gatsby-transformer-yaml": "^3.1.0",
+    "gatsby-remark-images": "^4.2.0",
+    "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-transformer-sharp": "^3.2.0",
+    "gatsby-transformer-yaml": "^3.2.0",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
     "postcss": "^8.2.8",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.2.1",
     "sass": "^1.32.8",
     "tailwindcss": "^2.0.4",
