Update yarn; remove Insta embeds

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,28 +1,25 @@
 nodeLinker: node-modules
 
+npmScopes:
+  fortawesome:
+    npmAlwaysAuth: true
+    npmAuthToken: "${FA_TOKEN}"
+    npmRegistryServer: "https://npm.fontawesome.com/"
+
 packageExtensions:
   eslint-config-airbnb-typescript@*:
     dependencies:
-      eslint: '*'
-      eslint-plugin-import: '*'
-      eslint-plugin-jsx-a11y: '*'
-      eslint-plugin-react: '*'
-      eslint-plugin-react-hooks: '*'
+      eslint: "*"
+      eslint-plugin-import: "*"
+      eslint-plugin-jsx-a11y: "*"
+      eslint-plugin-react: "*"
+      eslint-plugin-react-hooks: "*"
   eslint-module-utils@*:
     dependencies:
-      eslint-import-resolver-node: '*'
-  # sass-loader@*:
-  #   peerDependencies:
-  #     node-sass: "^4.0.0"
+      eslint-import-resolver-node: "*"
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
-    spec: '@yarnpkg/plugin-interactive-tools'
+    spec: "@yarnpkg/plugin-interactive-tools"
 
-npmScopes:
-  fortawesome:
-    npmRegistryServer: 'https://npm.fontawesome.com/'
-    npmAlwaysAuth: true
-    npmAuthToken: ${FA_TOKEN}
-
-yarnPath: .yarn/releases/yarn-2.4.0.cjs
+yarnPath: .yarn/releases/yarn-3.0.0.cjs
