--- a/package.json
+++ b/package.json
@@ -69,9 +69,7 @@
     "gatsby-source-filesystem": "^3.2.0",
     "gatsby-transformer-sharp": "^3.2.0",
     "gatsby-transformer-yaml": "^3.2.0",
-    "husky": "^4.3.8",
     "jest": "^26.6.3",
-    "lint-staged": "^10.5.3",
     "postcss": "^8.2.8",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.2.1",
@@ -82,11 +80,6 @@
     "typescript": "4.1.5"
   },
   "license": "MIT",
-  "lint-staged": {
-    "*.{ts,tsx}": [
-      "eslint"
-    ]
-  },
   "scripts": {
     "start": "yarn dev",
     "build": "yarn tailwind:export && GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
@@ -96,9 +89,5 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "gatsby clean"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  }
+  "packageManager": "yarn@3.0.0"
 }
