Add UX Research category; change xl footer cols

--- a/src/config/topics.yml
+++ b/src/config/topics.yml
@@ -41,3 +41,8 @@
   id: interaction
   items:
     - mobile-apps-vs-websites
+
+- label: UX Research
+  id: ux-research
+  items:
+    - bias-ethics-user-research
